--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,22 +1,34 @@
-#??
+log4j.rootLogger = debug,stdout,D,E
 
-#1. rootLogger ???????????
-#--???error > warn > info > debug
-log4j.rootLogger =debug,console, file
-#2. ????????
-log4j.appender.console=org.apache.log4j.ConsoleAppender
 
-#3. ????????(????)
-log4j.appender.console.layout=org.apache.log4j.PatternLayout
-#---??????:  ????????????????????
-log4j.appender.console.layout.ConversionPattern=%d %p %c.%M()-%m%n
-#-----------------------------------------------------------
-log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=../logs/20170614.log
-log4j.appender.file.MaxFileSize=1024KB
-log4j.appender.file.MaxBackupIndex=10
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d %p %c.%M()-%m%n
+### 输出到控制台 ###
+log4j.appender.stdout = org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target = System.out
+log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern =  %d{ABSOLUTE} %5p %c{1}:%L - %m%n
+### 输出到日志文件 ###
+log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
+###设置DatePattern，当天日志保存到log.log文件，前一天的日志文件名将被修改为
+#log.log + _yyyy-MM-dd.log
+log4j.appender.D.File =d:/logs/log.log
+log4j.appender.D.DatePattern = '_'yyyy-MM-dd'.log'
+log4j.appender.D.Append = true
+## 输出DEBUG级别以上的日志
+log4j.appender.D.Threshold = DEBUG
+log4j.appender.D.layout = org.apache.log4j.PatternLayout
+log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+
+
+### 保存异常信息到单独文件 ###
+log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
+###设置DatePattern，当天日志保存到error.log文件，前一天的日志文件名将被修改为
+#error.log + _yyyy-MM-dd.log
+log4j.appender.E.File =d:/logs/chen.log
+log4j.appender.E.DatePattern = '_'yyyy-MM-dd'.log'
+log4j.appender.E.Append = true
+## 只输出ERROR级别以上的日志!!!
+log4j.appender.E.Threshold = ERROR
+log4j.appender.E.layout = org.apache.log4j.PatternLayout
 
 
 
