--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -23,7 +23,7 @@ log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] 
 log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
 ###设置DatePattern，当天日志保存到error.log文件，前一天的日志文件名将被修改为
 #error.log + _yyyy-MM-dd.log
-log4j.appender.E.File =d:/logs/chen.log
+log4j.appender.E.File =d:/logs/error.log
 log4j.appender.E.DatePattern = '_'yyyy-MM-dd'.log'
 log4j.appender.E.Append = true
 ## 只输出ERROR级别以上的日志!!!
