--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -2,10 +2,10 @@ log4j.rootLogger = debug,stdout,D,E
 
 
 ### 输出到控制台 ###
-log4j.appender.stdout = org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target = System.out
-log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern =  %d{ABSOLUTE} %5p %c{1}:%L - %m%n
+##log4j.appender.stdout = org.apache.log4j.ConsoleAppender
+##log4j.appender.stdout.Target = System.out
+##log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
+##log4j.appender.stdout.layout.ConversionPattern =  %d{ABSOLUTE} %5p %c{1}:%L - %m%n
 ### 输出到日志文件 ###
 log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
 ###设置DatePattern，当天日志保存到log.log文件，前一天的日志文件名将被修改为
