--- a/src/myProp.properties
+++ b/src/myProp.properties
@@ -1,4 +1,5 @@
 isDebug=true;
-followUrl=http://yun.baidu.com/pcloud/friend/getfollowlist?query_uk=%s&limit=24&start=%s&bdstoken=e6f1efec456b92778e70c55ba5d81c3d&channel=chunlei&clienttype=0&web=1&logid=MTQ3NDA3NDg5NzU4NDAuMzQxNDQyMDY2MjA5NDA4NjU=
+followUrl=http://pan.baidu.com/pcloud/friend/getfollowlist?query_uk=%s&limit=24&start=%s&bdstoken=3a146beb893aaa1b05a14422f2feb20b&channel=chunlei&clienttype=0&web=1&logid=MTQ5NzY5ODk3NTU2MDAuODExMDUzNTg3MDg5OTIwNQ==
 fansUrl=http://pan.baidu.com/pcloud/friend/getfanslist?query_uk=%s&limit=24&start=%s&bdstoken=null&channel=chunlei&clienttype=0&web=1&logid=MTQ3NDAzNjQwNzg3OTAuNzM1MzMxMDUyMDczMjYxNA==
-shareUrl=http://yun.baidu.com/pcloud/feed/getsharelist?t=1497504725376&category=0&auth_type=1&request_location=share_home&start=%s&limit=60&query_uk=%s&channel=chunlei&clienttype=0&web=1&logid=MTQ5NzUwNDcyNTQwMDAuNjI5MzE3MDk2MTU0MzgyNA==&bdstoken=3a146beb893aaa1b05a14422f2feb20b
+shareUrl=http://pan.baidu.com/pcloud/feed/getsharelist?t=1497697835045&category=0&auth_type=1&request_location=share_home&start=%s&limit=60&query_uk=%s&channel=chunlei&clienttype=0&web=1&logid=MTQ5NzY5NzgzNTA2MTAuNjkyODE0MTI4NTIzOTcy&bdstoken=3a146beb893aaa1b05a14422f2feb20b
+albumUrl=http://pan.baidu.com/pcloud/album/getlist?t=1497757816238&start=0&limit=60&query_uk=743889484&channel=chunlei&clienttype=0&web=1&logid=MTQ5Nzc1NzgxNjI1NzAuOTI5MjAwMjMwNTM2OTI1MQ==&bdstoken=3a146beb893aaa1b05a14422f2feb20b
